# papercut

./: .gitignore  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  feature_requests.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
archive/v0.2/: books_combiner.py
archive/v0.2/cli/: book.py  meta.py  report.py  simulate.py
archive/v0.2/codegen/: __init__.py  generator.py
archive/v0.2/llm/: __init__.py  client.py  prompts.py
archive/v0.2/meta/: __init__.py  batch.py
archive/v0.2/report/: __init__.py  generator.py
archive/v0.2/report/renderers/: __init__.py  json_renderer.py  latex.py  markdown.py  pdf.py
chapters/: 01_introduction_and_motivation.txt  02_running_and_analyzing_experiments.txt  03_twyman.txt  04_experimentation_platform_and_culture.txt  05_speed_matters.txt  06_organizational_metrics.txt  07_metrics_for_experimentation_and_the.txt  08_institutional_memory_and_meta.txt  09_ethics_in_controlled_experiments.txt  10_complementary_techniques.txt  11_observational_causal_studies.txt  12_client.txt  13_instrumentation.txt  14_choosing_a_randomization_unit.txt  15_ramping_experiment_exposure:_trading_off.txt  16_scaling_experiment_analyses.txt  17_the_statistics_behind_online.txt  18_variance_estimation_and_improved_sensiti.txt  19_the_a.txt  20_triggering_for_improved_sensitivity.txt  21_sample_ratio_mismatch_and_other.txt  22_leakage_and_interference_between_variant.txt  23_measuring_long.txt
docs/: conf.py  index.rst  installation.rst  quickstart.rst  reference.rst  requirements.txt  tutorial.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/_build/html/api/: books.html  cache.html  cli.html  config.html  core.html  exceptions.html  extractors.html  fetchers.html  index.html  index_module.html  intelligence.html  llm.html  output.html  utils.html
docs/_build/html/tutorial/: caching.html  extracting.html  fetching.html  index.html  indexing.html  llm.html
docs/api/: cache.rst  cli.rst  config.rst  converters.rst  core.rst  fetchers.rst  index.rst  index_module.rst  intelligence.rst  output.rst  resolver.rst  utils.rst
docs/tutorial/: caching.rst  equations.rst  extracting.rst  fetching.rst  follow.rst  index.rst  indexing.rst  llm.rst  search.rst
docs/tutorial/python/: extracting.rst  fetching.rst
examples/: README.md
examples/book-ab-testing/: book_extractions.json  book_inventory.json
examples/papers-ml/: columns.yaml  extractions.json  inventory.json  matrix.csv
output/: book_summary.tex
src/papercut/: __init__.py  __main__.py  exceptions.py
src/papercut/books/: __init__.py  splitter.py
src/papercut/cache/: __init__.py  hash.py  store.py
src/papercut/cli/: __init__.py  app.py  cache_cmd.py  extract.py  fetch.py  index_cmd.py  read_cmd.py  report_cmd.py  study_cmd.py  summarize_cmd.py
src/papercut/config/: __init__.py  settings.py
src/papercut/core/: __init__.py  figures.py  references.py  tables.py  text.py
src/papercut/extractors/: __init__.py  base.py  pdfplumber.py
src/papercut/fetchers/: arxiv.py  base.py  doi.py  nber.py  ssrn.py  url.py
src/papercut/index/: __init__.py  indexer.py
src/papercut/intelligence/: __init__.py  report.py  study.py  summarize.py
src/papercut/llm/: __init__.py  client.py  prompts.py
src/papercut/output/: __init__.py  formatter.py
src/papercut/utils/: __init__.py  http.py
src/papercutter/: __init__.py  __main__.py  api.py  book.py  cli.py  exceptions.py  extract.py  grind.py  ingest.py  project.py  report.py
src/papercutter/books/: __init__.py  splitter.py
src/papercutter/cache/: __init__.py  store.py
src/papercutter/cli/: __init__.py  app.py  cache_cmd.py  configure_cmd.py  equations_cmd.py  extract.py  factory_report_cmd.py  fetch.py  follow_cmd.py  grind_cmd.py  index_cmd.py  ingest_cmd.py  init_cmd.py  read_cmd.py  report_cmd.py  search_cmd.py  status_cmd.py  study_cmd.py  summarize_cmd.py  utils.py
src/papercutter/config/: __init__.py  settings.py
src/papercutter/converters/: __init__.py  base.py  mathpix.py  nougat.py  pix2tex.py
src/papercutter/core/: __init__.py  equations.py  figures.py  follower.py  references.py  resolver.py  tables.py  text.py  vision.py
src/papercutter/extractors/: __init__.py  base.py  pdfplumber.py
src/papercutter/fetchers/: arxiv.py  base.py  doi.py  nber.py  registry.py  ssrn.py  url.py
src/papercutter/grinding/: __init__.py  extractor.py  generator.py  matrix.py  schema.py  synthesis.py
src/papercutter/index/: __init__.py  indexer.py
src/papercutter/ingest/: __init__.py  docling_wrapper.py  matcher.py  ocr_fallback.py  pipeline.py  splitter.py
src/papercutter/ingest/fetchers/: __init__.py  arxiv.py  base.py  doi.py  nber.py  registry.py  ssrn.py  url.py
src/papercutter/intelligence/: __init__.py  report.py  study.py  summarize.py
src/papercutter/legacy/: __init__.py
src/papercutter/legacy/books/: __init__.py  splitter.py
src/papercutter/legacy/cache/: __init__.py  store.py
src/papercutter/legacy/cli/: __init__.py  cache_cmd.py  equations_cmd.py  extract.py  fetch.py  follow_cmd.py  index_cmd.py  read_cmd.py  report_cmd.py  search_cmd.py  study_cmd.py  (+1 more)
src/papercutter/llm/: __init__.py  client.py  prompts.py  schemas.py
src/papercutter/output/: __init__.py  formatter.py
src/papercutter/project/: __init__.py  inventory.py  manager.py  state.py
src/papercutter/reporting/: __init__.py  builder.py
src/papercutter/templates/: appendix.tex.j2  book_report.tex.j2  review.tex.j2
src/papercutter/utils/: __init__.py  bibtex.py  hashing.py  http.py
tests/: __init__.py  conftest.py  e2e_results.md  test.md
tests/unit/: __init__.py  test_equations.py  test_fetchers.py  test_references.py  test_security.py  test_tables.py  test_text.py
(+136 files in other folders)
