[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papercutter"
version = "2.0.1"
description = "Automated evidence synthesis pipeline for systematic literature reviews"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranjal Rawat" }
]
keywords = ["pdf", "systematic-review", "evidence-synthesis", "research", "llm", "docling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]

dependencies = [
    "typer[all]>=0.12.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "bibtexparser>=1.4.0",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
fast = [
    "pymupdf>=1.24.0",
]
llm = [
    "litellm>=1.30.0",
    "instructor>=1.0.0",
]
docling = [
    "docling>=2.0.0",
]
factory = [
    "jinja2>=3.0.0",
    "thefuzz>=0.22.0",
    "papercutter[docling,llm]",
]
equations = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]
equations-nougat = [
    "papercutter[equations]",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
equations-pix2tex = [
    "papercutter[equations]",
    "pix2tex>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
all = ["papercutter[fast,llm,equations,factory,dev]"]

[project.scripts]
papercutter = "papercutter.cli.app:app"

[project.urls]
Homepage = "https://github.com/rawatpranjal/papercutter"
Repository = "https://github.com/rawatpranjal/papercutter"

[tool.hatch.build.targets.wheel]
packages = ["src/papercutter"]

[tool.hatch.build.targets.sdist]
exclude = [
    "archive/",
    "docs/",
    "input/",
    "tests/downloads/",
    "*.pdf",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["papercutter"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "arxiv.*", "bibtexparser.*", "fitz.*", "transformers.*", "torch.*", "pix2tex.*", "docling.*", "jinja2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/papercutter"]
branch = true
