[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papercutter"
version = "3.0.0"
description = "PDF to Data Factory: Extract structured data from academic papers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranjal Rawat" }
]
keywords = ["pdf", "systematic-review", "evidence-synthesis", "research", "llm", "docling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]

dependencies = [
    "typer[all]>=0.12.0",
    "pypdf>=4.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "json-repair>=0.30.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0.0"]
llm = ["litellm>=1.30.0"]
report = ["jinja2>=3.0.0"]
full = ["papercutter[docling,llm,report]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
papercutter = "papercutter.cli:app"

[project.urls]
Homepage = "https://github.com/rawatpranjal/papercutter"
Repository = "https://github.com/rawatpranjal/papercutter"

[tool.hatch.build.targets.wheel]
packages = ["src/papercutter"]

[tool.hatch.build.targets.sdist]
exclude = [
    "archive/",
    "docs/",
    "input/",
    "tests/",
    "*.pdf",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["papercutter"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["docling.*", "docling_core.*", "litellm.*", "jinja2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
